--- a/EricLiu.ipynb
+++ b/EricLiu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,13 @@
     "import matplotlib.pyplot as plt\n",
     "from pprint import pprint\n",
     "import gmplot\n",
-    "from config import api_key\n",
+    "#from config import api_key\n",
     "from pprint import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,11 +45,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-118.42</td>\n",
+       "      <td>34.08</td>\n",
+       "      <td>48</td>\n",
+       "      <td>2413</td>\n",
+       "      <td>261.0</td>\n",
+       "      <td>770</td>\n",
+       "      <td>248</td>\n",
+       "      <td>15.0001</td>\n",
+       "      <td>500001</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-117.66</td>\n",
+       "      <td>33.48</td>\n",
+       "      <td>22</td>\n",
+       "      <td>809</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>334</td>\n",
+       "      <td>157</td>\n",
+       "      <td>2.3846</td>\n",
+       "      <td>500001</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-118.50</td>\n",
+       "      <td>33.97</td>\n",
+       "      <td>29</td>\n",
+       "      <td>2737</td>\n",
+       "      <td>808.0</td>\n",
+       "      <td>1157</td>\n",
+       "      <td>696</td>\n",
+       "      <td>5.1280</td>\n",
+       "      <td>500001</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-122.47</td>\n",
+       "      <td>37.73</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1653</td>\n",
+       "      <td>252.0</td>\n",
+       "      <td>641</td>\n",
+       "      <td>224</td>\n",
+       "      <td>10.6605</td>\n",
+       "      <td>500001</td>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-122.47</td>\n",
+       "      <td>37.73</td>\n",
+       "      <td>52</td>\n",
+       "      <td>2151</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>762</td>\n",
+       "      <td>274</td>\n",
+       "      <td>10.7309</td>\n",
+       "      <td>500001</td>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "0    -118.42     34.08                  48         2413           261.0   \n",
+       "1    -117.66     33.48                  22          809           180.0   \n",
+       "2    -118.50     33.97                  29         2737           808.0   \n",
+       "3    -122.47     37.73                  50         1653           252.0   \n",
+       "4    -122.47     37.73                  52         2151           280.0   \n",
+       "\n",
+       "   population  households  median_income  median_house_value ocean_proximity  \n",
+       "0         770         248        15.0001              500001       <1H OCEAN  \n",
+       "1         334         157         2.3846              500001       <1H OCEAN  \n",
+       "2        1157         696         5.1280              500001       <1H OCEAN  \n",
+       "3         641         224        10.6605              500001      NEAR OCEAN  \n",
+       "4         762         274        10.7309              500001      NEAR OCEAN  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# SSort data by house value\n",
     "df1 = df1.sort_values('median_house_value', ascending=False).reset_index(drop=True)\n",
@@ -58,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +205,22 @@
    "metadata": {},
    "source": [
     "Plotting Top 5% and Bottom 5% on gmap (Use gmplot package)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the center of the map\n",
+    "gmap_df1 = gmplot.GoogleMapPlotter(df1['latitude'].median(),\n",
+    "                                   df1['longitude'].median(), 100000)\n",
+    "# Plot scatter points based on LatLng\n",
+    "gmap_df1.scatter(df1['latitude'], df1['longitude'], '#FF0000', \n",
+    "                              size = 2000, marker = False ) \n",
+    "# Draw out to 'Plot' folder in html format\n",
+    "gmap_df1.draw(\"Plot/gmap_df1.html\")"
    ]
   },
   {
