--- a/ttest.ipynb
+++ b/ttest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,135 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>housing_median_age</th>\n",
-       "      <th>total_rooms</th>\n",
-       "      <th>total_bedrooms</th>\n",
-       "      <th>population</th>\n",
-       "      <th>households</th>\n",
-       "      <th>median_income</th>\n",
-       "      <th>median_house_value</th>\n",
-       "      <th>ocean_proximity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-118.42</td>\n",
-       "      <td>34.08</td>\n",
-       "      <td>48</td>\n",
-       "      <td>2413</td>\n",
-       "      <td>261.0</td>\n",
-       "      <td>770</td>\n",
-       "      <td>248</td>\n",
-       "      <td>15.0001</td>\n",
-       "      <td>500001</td>\n",
-       "      <td>&lt;1H OCEAN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-117.66</td>\n",
-       "      <td>33.48</td>\n",
-       "      <td>22</td>\n",
-       "      <td>809</td>\n",
-       "      <td>180.0</td>\n",
-       "      <td>334</td>\n",
-       "      <td>157</td>\n",
-       "      <td>2.3846</td>\n",
-       "      <td>500001</td>\n",
-       "      <td>&lt;1H OCEAN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-118.50</td>\n",
-       "      <td>33.97</td>\n",
-       "      <td>29</td>\n",
-       "      <td>2737</td>\n",
-       "      <td>808.0</td>\n",
-       "      <td>1157</td>\n",
-       "      <td>696</td>\n",
-       "      <td>5.1280</td>\n",
-       "      <td>500001</td>\n",
-       "      <td>&lt;1H OCEAN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-122.47</td>\n",
-       "      <td>37.73</td>\n",
-       "      <td>50</td>\n",
-       "      <td>1653</td>\n",
-       "      <td>252.0</td>\n",
-       "      <td>641</td>\n",
-       "      <td>224</td>\n",
-       "      <td>10.6605</td>\n",
-       "      <td>500001</td>\n",
-       "      <td>NEAR OCEAN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-122.47</td>\n",
-       "      <td>37.73</td>\n",
-       "      <td>52</td>\n",
-       "      <td>2151</td>\n",
-       "      <td>280.0</td>\n",
-       "      <td>762</td>\n",
-       "      <td>274</td>\n",
-       "      <td>10.7309</td>\n",
-       "      <td>500001</td>\n",
-       "      <td>NEAR OCEAN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
-       "0    -118.42     34.08                  48         2413           261.0   \n",
-       "1    -117.66     33.48                  22          809           180.0   \n",
-       "2    -118.50     33.97                  29         2737           808.0   \n",
-       "3    -122.47     37.73                  50         1653           252.0   \n",
-       "4    -122.47     37.73                  52         2151           280.0   \n",
-       "\n",
-       "   population  households  median_income  median_house_value ocean_proximity  \n",
-       "0         770         248        15.0001              500001       <1H OCEAN  \n",
-       "1         334         157         2.3846              500001       <1H OCEAN  \n",
-       "2        1157         696         5.1280              500001       <1H OCEAN  \n",
-       "3         641         224        10.6605              500001      NEAR OCEAN  \n",
-       "4         762         274        10.7309              500001      NEAR OCEAN  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SSort data by house value\n",
     "df1 = df1.sort_values('median_house_value', ascending=False).reset_index(drop=True)\n",
@@ -171,108 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sub Type</th>\n",
-       "      <th>St#</th>\n",
-       "      <th>St Name</th>\n",
-       "      <th>City</th>\n",
-       "      <th>L/C Price</th>\n",
-       "      <th>Br/Ba</th>\n",
-       "      <th>YrBuilt</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MANL/D</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Via Veneto    #12</td>\n",
-       "      <td>CHU</td>\n",
-       "      <td>$89,000</td>\n",
-       "      <td>2/2,0,0,0</td>\n",
-       "      <td>2006</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CONDO/A</td>\n",
-       "      <td>1653</td>\n",
-       "      <td>Pentecost Way    #1</td>\n",
-       "      <td>SD</td>\n",
-       "      <td>$158,000</td>\n",
-       "      <td>1/1,0,0,0</td>\n",
-       "      <td>1980</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CONDO/A</td>\n",
-       "      <td>6101</td>\n",
-       "      <td>Adelaide Ave    #107</td>\n",
-       "      <td>SD</td>\n",
-       "      <td>$168,250</td>\n",
-       "      <td>0/1,0,0,0</td>\n",
-       "      <td>1984/ASR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CONDO/A</td>\n",
-       "      <td>589 N</td>\n",
-       "      <td>Johnson    #137</td>\n",
-       "      <td>ELC</td>\n",
-       "      <td>$175,000</td>\n",
-       "      <td>2/1,0,0,0</td>\n",
-       "      <td>1980</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>SFR</td>\n",
-       "      <td>3138</td>\n",
-       "      <td>Roadrunner</td>\n",
-       "      <td>BSPG</td>\n",
-       "      <td>$190,000</td>\n",
-       "      <td>2/2,0,0,0</td>\n",
-       "      <td>1986</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Sub Type    St#               St Name  City  L/C Price      Br/Ba   YrBuilt\n",
-       "0   MANL/D     12     Via Veneto    #12   CHU   $89,000   2/2,0,0,0      2006\n",
-       "1  CONDO/A   1653   Pentecost Way    #1    SD  $158,000   1/1,0,0,0      1980\n",
-       "2  CONDO/A   6101  Adelaide Ave    #107    SD  $168,250   0/1,0,0,0  1984/ASR\n",
-       "3  CONDO/A  589 N       Johnson    #137   ELC  $175,000   2/1,0,0,0      1980\n",
-       "4      SFR   3138         Roadrunner     BSPG  $190,000   2/2,0,0,0      1986"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Keep only the columns that are useful \n",
     "df2 = df2[['Sub Type', 'St#', 'St Name', 'City', 'L/C Price', 'Br/Ba', 'YrBuilt']]\n",
@@ -282,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,242 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sub Type</th>\n",
-       "      <th>St#</th>\n",
-       "      <th>St Name</th>\n",
-       "      <th>City</th>\n",
-       "      <th>L/C Price</th>\n",
-       "      <th>Br/Ba</th>\n",
-       "      <th>YrBuilt</th>\n",
-       "      <th>house_price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MANL/D</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Via Veneto    #12</td>\n",
-       "      <td>CHU</td>\n",
-       "      <td>$89,000</td>\n",
-       "      <td>2/2,0,0,0</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>89,000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CONDO/A</td>\n",
-       "      <td>1653</td>\n",
-       "      <td>Pentecost Way    #1</td>\n",
-       "      <td>SD</td>\n",
-       "      <td>$158,000</td>\n",
-       "      <td>1/1,0,0,0</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>158,000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CONDO/A</td>\n",
-       "      <td>6101</td>\n",
-       "      <td>Adelaide Ave    #107</td>\n",
-       "      <td>SD</td>\n",
-       "      <td>$168,250</td>\n",
-       "      <td>0/1,0,0,0</td>\n",
-       "      <td>1984/ASR</td>\n",
-       "      <td>168,250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CONDO/A</td>\n",
-       "      <td>589 N</td>\n",
-       "      <td>Johnson    #137</td>\n",
-       "      <td>ELC</td>\n",
-       "      <td>$175,000</td>\n",
-       "      <td>2/1,0,0,0</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>175,000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>SFR</td>\n",
-       "      <td>3138</td>\n",
-       "      <td>Roadrunner</td>\n",
-       "      <td>BSPG</td>\n",
-       "      <td>$190,000</td>\n",
-       "      <td>2/2,0,0,0</td>\n",
-       "      <td>1986</td>\n",
-       "      <td>190,000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Sub Type    St#               St Name  City  L/C Price      Br/Ba   YrBuilt  \\\n",
-       "0   MANL/D     12     Via Veneto    #12   CHU   $89,000   2/2,0,0,0      2006   \n",
-       "1  CONDO/A   1653   Pentecost Way    #1    SD  $158,000   1/1,0,0,0      1980   \n",
-       "2  CONDO/A   6101  Adelaide Ave    #107    SD  $168,250   0/1,0,0,0  1984/ASR   \n",
-       "3  CONDO/A  589 N       Johnson    #137   ELC  $175,000   2/1,0,0,0      1980   \n",
-       "4      SFR   3138         Roadrunner     BSPG  $190,000   2/2,0,0,0      1986   \n",
-       "\n",
-       "  house_price  \n",
-       "0     89,000   \n",
-       "1    158,000   \n",
-       "2    168,250   \n",
-       "3    175,000   \n",
-       "4    190,000   "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df2.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>L/C Price</th>\n",
-       "      <th>Sub Type</th>\n",
-       "      <th>St#</th>\n",
-       "      <th>St Name</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Br/Ba</th>\n",
-       "      <th>YrBuilt</th>\n",
-       "      <th>house_price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>$89,000</td>\n",
-       "      <td>MANL/D</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Via Veneto    #12</td>\n",
-       "      <td>CHU</td>\n",
-       "      <td>2/2,0,0,0</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>89,000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>$158,000</td>\n",
-       "      <td>CONDO/A</td>\n",
-       "      <td>1653</td>\n",
-       "      <td>Pentecost Way    #1</td>\n",
-       "      <td>SD</td>\n",
-       "      <td>1/1,0,0,0</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>158,000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>$168,250</td>\n",
-       "      <td>CONDO/A</td>\n",
-       "      <td>6101</td>\n",
-       "      <td>Adelaide Ave    #107</td>\n",
-       "      <td>SD</td>\n",
-       "      <td>0/1,0,0,0</td>\n",
-       "      <td>1984/ASR</td>\n",
-       "      <td>168,250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>$175,000</td>\n",
-       "      <td>CONDO/A</td>\n",
-       "      <td>589 N</td>\n",
-       "      <td>Johnson    #137</td>\n",
-       "      <td>ELC</td>\n",
-       "      <td>2/1,0,0,0</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>175,000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>$190,000</td>\n",
-       "      <td>SFR</td>\n",
-       "      <td>3138</td>\n",
-       "      <td>Roadrunner</td>\n",
-       "      <td>BSPG</td>\n",
-       "      <td>2/2,0,0,0</td>\n",
-       "      <td>1986</td>\n",
-       "      <td>190,000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   L/C Price Sub Type    St#               St Name  City      Br/Ba   YrBuilt  \\\n",
-       "0   $89,000    MANL/D     12     Via Veneto    #12   CHU  2/2,0,0,0      2006   \n",
-       "1  $158,000   CONDO/A   1653   Pentecost Way    #1    SD  1/1,0,0,0      1980   \n",
-       "2  $168,250   CONDO/A   6101  Adelaide Ave    #107    SD  0/1,0,0,0  1984/ASR   \n",
-       "3  $175,000   CONDO/A  589 N       Johnson    #137   ELC  2/1,0,0,0      1980   \n",
-       "4  $190,000       SFR   3138         Roadrunner     BSPG  2/2,0,0,0      1986   \n",
-       "\n",
-       "  house_price  \n",
-       "0     89,000   \n",
-       "1    158,000   \n",
-       "2    168,250   \n",
-       "3    175,000   \n",
-       "4    190,000   "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df2_by_value = df2.set_index(\"L/C Price\")\n",
     "df2_by_value = df2_by_value.reset_index()\n",
@@ -542,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -554,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,18 +129,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "t-statistics is -7.948970542736438.\n",
-      "p-value is 2.306824488018087e-15.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(t_stat, p) = stats.ttest_ind(s1, s2, equal_var=False)\n",
     "print(\"t-statistics is {}.\".format(t_stat))\n",
@@ -596,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,20 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "t-statistics is [234.62584454].\n",
-      "p-value is [0.].\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(t_stat, p) = stats.ttest_ind(np_scaled_s1, np_scaled_s2, equal_var=False)\n",
     "print(\"t-statistics is {}.\".format(t_stat))\n",
@@ -631,7 +166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
